--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/clusterrole-csi-syncer.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/clusterrole-csi-syncer.yaml
@@ -10,3 +10,9 @@ rules:
 - apiGroups: [""]
   resources: ["persistentvolumes"]
   verbs: ["get", "list", "watch"]
+- apiGroups: ["cns.vmware.com"]
+  resources: ["cnsvolumeoperationrequests"]
+  verbs: ["create", "get", "list", "update", "delete"]
+- apiGroups: [ "cns.vmware.com" ]
+  resources: [ "csinodetopologies" ]
+  verbs: ["get", "update", "watch", "list"]
