--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -56,9 +56,12 @@ images:
   repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager-provider-vsphere
   tag: "v0.10.0"
 - name: vsphere-csi-driver-controller
-  sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
-  repository: gcr.io/cloud-provider-vsphere/csi/release/driver
-  tag: v2.3.0
+  #sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
+  #repository: gcr.io/cloud-provider-vsphere/csi/release/driver
+  #tag: v2.3.0
+  sourceRepository: github.com/MartinWeindel/vsphere-csi-driver
+  repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
+  tag: v2.3.0-gardener1
 - name: vsphere-csi-driver-node
   sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   repository: gcr.io/cloud-provider-vsphere/csi/release/driver
