fixes after rebase

--- a/charts/internal/supervisor-service-account-ccm/templates/rbac-csi.yaml
+++ b/charts/internal/supervisor-service-account-ccm/templates/rbac-csi.yaml
@@ -28,4 +28,7 @@ rules:
   - apiGroups: ["cns.vmware.com"]
     resources: ["cnsvolumemetadatas"]
     verbs: ["create", "get", "list", "watch", "update", "patch", "delete"]
+  - apiGroups: ["cns.vmware.com"]
+    resources: ["cnscsisvfeaturestates"]
+    verbs: ["get", "list", "watch"]
 
