--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/configmap-internal-featurestate.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/configmap-internal-featurestate.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 data:
   "csi-migration": "false"
   "csi-auth-check": "true"
+  "csi-sv-feature-states-replication": "{{ .Values.vsphereWithKubernetes }}"
   "online-volume-extend": "true"
   "trigger-csi-fullsync": "false"
   "async-query-volume": "false"
