--- a/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
@@ -33,6 +33,7 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         command:
         - /gardener-extension-provider-vsphere
+        - --leader-election-resource-lock={{ .Values.leaderElection.resourceLock }}
         - --config-file=/etc/{{ include "name" . }}/config/config.yaml
         - --controlplane-max-concurrent-reconciles={{ .Values.controllers.controlplane.concurrentSyncs }}
         - --infrastructure-max-concurrent-reconciles={{ .Values.controllers.infrastructure.concurrentSyncs }}
