--- a/charts/gardener-extension-provider-vsphere/values.yaml
+++ b/charts/gardener-extension-provider-vsphere/values.yaml
@@ -47,6 +47,9 @@ webhookConfig:
   servicePort: 443
   serverPort: 10250
 
+leaderElection:
+  resourceLock: leases
+
 config:
   clientConnection:
     acceptContentTypes: application/json
