--- a/charts/internal/machine-controller-manager/seed/templates/clusterrole.yaml
+++ b/charts/internal/machine-controller-manager/seed/templates/clusterrole.yaml
@@ -19,3 +19,20 @@ rules:
   - events
   verbs:
   - "*"
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  resourceNames:
+  - machine-controller
+  - machine-controller-manager
+  verbs:
+  - get
+  - watch
+  - update
