🛡 Enable `ServiceAccount` token projection and token requestor (#192)
* Revendor gardener/gardener@v1.39.1

* Use `ServiceAccount` token projection for extension

* Adapt worker controller

* Adapt controlplane controller

* Adapt prometheus configuration

* fix role bindings for vsphere-csi-controller (#1)

* Ignore CCM ServiceAccount when using token requestor

* add missing rbac permissions for vpshere-csi (#2)

Co-authored-by: Martin Weindel <martin.weindel@sap.com>

--- a/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
+++ b/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
@@ -4,6 +4,10 @@ kind: ServiceAccount
 metadata:
   name: cloud-controller-manager
   namespace: kube-system
+{{- if not .Values.global.useTokenRequestor }}
+  annotations:
+    resources.gardener.cloud/mode: Ignore
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -103,4 +107,18 @@ subjects:
   - kind: ServiceAccount
     name: cloud-controller-manager
     namespace: kube-system
+{{- if .Values.global.useTokenRequestor }}
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: extensions.gardener.cloud:provider-vsphere:cloud-controller-manager
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: cloud-controller-manager
+  namespace: kube-system
+{{- end }}
