--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/serviceaccount.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/serviceaccount.yaml
@@ -4,6 +4,9 @@ kind: ServiceAccount
 metadata:
   name: csi-driver-node
   namespace: {{ .Release.Namespace }}
+{{- if .Values.global.useProjectedTokenMount }}
+automountServiceAccountToken: false
+{{- end }}
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
@@ -24,6 +27,11 @@ subjects:
   - kind: ServiceAccount
     name: csi-driver-node
     namespace: {{ .Release.Namespace }}
+{{- if .Values.global.useTokenRequestor }}
+  - kind: ServiceAccount
+    name: vsphere-csi-controller
+    namespace: {{ .Release.Namespace }}
+{{- end }}
 roleRef:
   kind: Role
   name: vsphere-csi-node-role
