--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -68,9 +68,12 @@ images:
   repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
   tag: v2.4.1-gardener2
 - name: vsphere-csi-driver-syncer
-  sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
-  repository: gcr.io/cloud-provider-vsphere/csi/release/syncer
-  tag: v2.4.1
+  #sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
+  #repository: gcr.io/cloud-provider-vsphere/csi/release/syncer
+  #tag: v2.4.1
+  sourceRepository: github.com/MartinWeindel/vsphere-csi-driver
+  repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/syncer
+  tag: v2.4.1-gardener2
 - name: liveness-probe
   sourceRepository: github.com/kubernetes-csi/livenessprobe
   repository: k8s.gcr.io/sig-storage/livenessprobe
