--- a/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
+++ b/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
@@ -113,6 +113,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: extensions.gardener.cloud:provider-vsphere:cloud-controller-manager
+  annotations:
+    resources.gardener.cloud/keep-object: "true"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
