switching default branch to main

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,6 +1,6 @@
 cfgs:
   default:
-    branches: ['master']
+    branches: ['main']
     inherit:
       gardener-extension-provider-vsphere-updates:
         jobs:
@@ -19,7 +19,7 @@ cfgs:
         base_definition:
           steps:
             verify:
-              image: 'eu.gcr.io/gardener-project/3rd/golang:1.17.5'
+              image: 'golang:1.17.7'
 
   release-branches:
     index: 1
@@ -29,7 +29,7 @@ cfgs:
         base_definition:
           steps:
             verify:
-              image: 'eu.gcr.io/gardener-project/3rd/golang:1.17.5'
+              image: 'golang:1.17.7'
         jobs:
           release:
             traits:
