--- a/charts/internal/shoot-system-components/charts/csi-vsphere/values.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/values.yaml
@@ -15,3 +15,10 @@ topologyAware: true
 
 #labelRegion: k8s-region
 #labelZone: k8s-zone
+
+webhookConfig:
+  url: https://service-name.service-namespace/volumesnapshot
+  caBundle: |
+    -----BEGIN CERTIFICATE-----
+    ...
+    -----END CERTIFICATE-----
