--- a/charts/internal/machine-controller-manager/seed/values.yaml
+++ b/charts/internal/machine-controller-manager/seed/values.yaml
@@ -9,6 +9,9 @@ podLabels: {}
 
 providerName: provider-foo
 
+# injected by generic worker actuator
+genericTokenKubeconfigSecretName: generic-token-kubeconfig
+
 namespace:
   uid: uuid-of-namespace
 
