--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-vsphere-csi-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-vsphere-csi-controller.yaml
@@ -239,7 +239,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
@@ -255,7 +255,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
@@ -271,7 +271,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
@@ -287,7 +287,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
@@ -304,7 +304,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
@@ -321,7 +321,7 @@ spec:
                 items:
                 - key: kubeconfig
                   path: kubeconfig
-                name: generic-token-kubeconfig
+                name: {{ .Values.global.genericTokenKubeconfigSecretName }}
                 optional: false
             - secret:
                 items:
