--- a/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
@@ -94,6 +94,8 @@ csiSnapshotValidationWebhook:
   limits:
     cpu: 30m
     memory: 50Mi
+  secrets:
+    server: csi-snapshot-validation-server
 
 volumesnapshots:
   enabled: false # currently not supported by vsphere-csi-driver
