--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -54,8 +54,8 @@ spec:
         - --leader-elect=true
         - --secure-port=10258
         - --port=0
-        - --tls-cert-file=/var/lib/cloud-controller-manager-server/cloud-controller-manager-server.crt
-        - --tls-private-key-file=/var/lib/cloud-controller-manager-server/cloud-controller-manager-server.key
+        - --tls-cert-file=/var/lib/cloud-controller-manager-server/tls.crt
+        - --tls-private-key-file=/var/lib/cloud-controller-manager-server/tls.key
         - --tls-cipher-suites={{ .Values.tlsCipherSuites | join "," }}
         - --v=2
         env:
@@ -113,7 +113,7 @@ spec:
               optional: false
       - name: cloud-controller-manager-server
         secret:
-          secretName: cloud-controller-manager-server
+          secretName: {{ .Values.secrets.server }}
       - name: cloud-provider-config
         secret:
           secretName: cloud-provider-config
