--- a/.test-defs/infrastructure-test.yaml
+++ b/.test-defs/infrastructure-test.yaml
@@ -18,5 +18,5 @@ spec:
       --nsxt-transport-zone="${NSXT_TRANSPORT_ZONE}"
       --nsxt-t0-gateway="${NSXT_T0_GATEWAY}"
       --nsxt-edge-cluster="${NSXT_EDGE_CLUSTER}"
-      --nsxt-snat-ip-pool="${NSXT_SNAP_IP_POOL}"
+      --nsxt-snat-ip-pool="${NSXT_SNAT_IP_POOL}"
   image: golang:1.17.5
