Update/remove memory/cpu limits. Disable limit autoscaling.

--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-csi-snapshot-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-csi-snapshot-controller.yaml
@@ -9,6 +9,7 @@ spec:
   resourcePolicy:
     containerPolicies:
     - containerName: csi-snapshot-controller
+      controlledValues: RequestsOnly
       minAllowed:
         memory: 25Mi
   targetRef:
