Fix bad search/replace
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/.ci/testruns/default/templates/testrun.yaml
+++ b/.ci/testruns/default/templates/testrun.yaml
@@ -27,7 +27,7 @@ spec:
       type: env
       valueFrom:
         secretKeyRef:
-          name: shoot-operator-vsphere
+          name: shoot-operator-gcp
           key: serviceaccount.json
     - name: REGION
       type: env
