Add parsers for csi-snapshoter

--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       automountServiceAccountToken: false
       containers:
-      - name: csi-snapshot-controller
+      - name: vsphere-csi-snapshot-controller
         image: {{ index .Values.images "csi-snapshot-controller" }}
         imagePullPolicy: IfNotPresent
         args:
