--- a/charts/gardener-extension-provider-vsphere/templates/configmap-logging.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/configmap-logging.yaml
@@ -36,6 +36,13 @@ data:
         Reserve_Data        True
 
     [FILTER]
+        Name                parser
+        Match               kubernetes.*csi-snapshot*vsphere-csi*
+        Key_Name            log
+        Parser              kubeapiserverParser
+        Reserve_Data        True
+
+    [FILTER]
         Name                modify
         Match               kubernetes.*
         Condition           Key_value_matches tag ^kubernetes\.var\.log\.containers\.(cloud-controller-manager-.+?_.+?_vsphere-cloud-controller-manager|vsphere-csi-controller-.+?_.+?_vsphere-csi)
