--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/csi-snapshot-validation-webhook-vpa.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/csi-snapshot-validation-webhook-vpa.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   resourcePolicy:
     containerPolicies:
-    - containerName: csi-snapshot-validation
+    - containerName: vsphere-csi-snapshot-validation
       minAllowed:
         memory: 25Mi
   targetRef:
