--- a/charts/internal/machine-controller-manager/seed/templates/deployment.yaml
+++ b/charts/internal/machine-controller-manager/seed/templates/deployment.yaml
@@ -37,6 +37,7 @@ spec:
 {{- end }}
     spec:
       serviceAccountName: machine-controller-manager
+      priorityClassName: gardener-system-300
       terminationGracePeriodSeconds: 5
       containers:
       - name: machine-controller-manager-provider-vsphere
