--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
@@ -29,6 +29,7 @@ spec:
         networking.gardener.cloud/to-shoot-apiserver: allowed
     spec:
       automountServiceAccountToken: false
+      priorityClassName: gardener-system-200
       containers:
       - name: vsphere-csi-snapshot-controller
         image: {{ index .Values.images "csi-snapshot-controller" }}
