--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -34,6 +34,7 @@ spec:
 {{- end }}
     spec:
       automountServiceAccountToken: false
+      priorityClassName: gardener-system-300
       containers:
       - name: vsphere-cloud-controller-manager
         image: {{ index .Values.images "vsphere-cloud-controller-manager" }}
