--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-csi-snapshot-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-csi-snapshot-controller.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.volumesnapshots.enabled }}
 ---
-apiVersion: autoscaling.k8s.io/v1beta2
+apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: csi-snapshot-controller-vpa
