--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/vpa.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/vpa.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling.k8s.io/v1beta2
+apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
   name: cloud-controller-manager-vpa
@@ -12,7 +12,10 @@ spec:
     updateMode: Auto
   resourcePolicy:
     containerPolicies:
-    - containerName: '*'
+    - containerName: vsphere-cloud-controller-manager
       minAllowed:
         cpu: 20m
         memory: 40M
+      maxAllowed:
+        cpu: 4
+        memory: 10G
