--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -69,21 +69,21 @@ images:
   #tag: v2.4.1
   sourceRepository: github.com/gardener/vsphere-csi-driver
   repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
-  tag: 2.6.0-gardener2
+  tag: v2.6.0-gardener2
 - name: vsphere-csi-driver-node
   #sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   #repository: gcr.io/cloud-provider-vsphere/csi/release/driver
   #tag: v2.4.1
   sourceRepository: github.com/gardener/vsphere-csi-driver
   repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
-  tag: 2.6.0-gardener2
+  tag: v2.6.0-gardener2
 - name: vsphere-csi-driver-syncer
   #sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   #repository: gcr.io/cloud-provider-vsphere/csi/release/syncer
   #tag: v2.4.1
   sourceRepository: github.com/gardener/vsphere-csi-driver
   repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/syncer
-  tag: 2.6.0-gardener2
+  tag: v2.6.0-gardener2
 - name: liveness-probe
   sourceRepository: github.com/kubernetes-csi/livenessprobe
   repository: k8s.gcr.io/sig-storage/livenessprobe
