--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/podsecuritypolicy.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/podsecuritypolicy.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.pspDisabled }}
 ---
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -25,3 +26,4 @@ spec:
   fsGroup:
     rule: RunAsAny
   readOnlyRootFilesystem: false
+{{- end }}
