WIP on GCVE, most GCVE cluster automation is done.
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/.ci/testruns/default/templates/testrun.yaml
+++ b/.ci/testruns/default/templates/testrun.yaml
@@ -29,7 +29,7 @@ spec:
         secretKeyRef:
           name: shoot-operator-gcp
           key: serviceaccount.json
-    - name: REGION
+    - name: LOCATION
       type: env
       value: us-east4
     - name: NSXT_HOST
@@ -83,10 +83,10 @@ spec:
           - name: PHASE
             type: env
             value: setup
-    - name: infrastructure-test
-      dependsOn: [ gcve-setup ]
-      definition:
-        name: infrastructure-test
+{{/*    - name: infrastructure-test*/}}
+{{/*      dependsOn: [ gcve-setup ]*/}}
+{{/*      definition:*/}}
+{{/*        name: infrastructure-test*/}}
 
   onExit:
     - name: gcve-teardown
