--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -1,34 +1,34 @@
 images:
 - name: csi-attacher
   sourceRepository: github.com/kubernetes-csi/external-attacher
-  repository: k8s.gcr.io/sig-storage/csi-attacher
+  repository: registry.k8s.io/sig-storage/csi-attacher
   tag: v3.5.0
 - name: csi-resizer
   sourceRepository: github.com/kubernetes-csi/external-resizer
-  repository: k8s.gcr.io/sig-storage/csi-resizer
+  repository: registry.k8s.io/sig-storage/csi-resizer
   tag: v1.5.0
 - name: csi-node-driver-registrar
   sourceRepository: github.com/kubernetes-csi/node-driver-registrar
-  repository: k8s.gcr.io/sig-storage/csi-node-driver-registrar
+  repository: registry.k8s.io/sig-storage/csi-node-driver-registrar
   tag: v2.5.1
 - name: csi-provisioner
   sourceRepository: github.com/kubernetes-csi/external-provisioner
-  repository: k8s.gcr.io/sig-storage/csi-provisioner
+  repository: registry.k8s.io/sig-storage/csi-provisioner
   tag: v3.2.1
   targetVersion: ">= 1.20"
 - name: csi-snapshotter
   sourceRepository: github.com/kubernetes-csi/external-snapshotter
-  repository: k8s.gcr.io/sig-storage/csi-snapshotter
+  repository: registry.k8s.io/sig-storage/csi-snapshotter
   tag: v6.0.1
   targetVersion: ">= 1.20"
 - name: csi-snapshot-controller
   sourceRepository: github.com/kubernetes-csi/external-snapshotter
-  repository: k8s.gcr.io/sig-storage/snapshot-controller
+  repository: registry.k8s.io/sig-storage/snapshot-controller
   tag: v6.0.1
   targetVersion: ">= 1.20"
 - name: csi-snapshot-validation-webhook
   sourceRepository: github.com/kubernetes-csi/external-snapshotter
-  repository: k8s.gcr.io/sig-storage/snapshot-validation-webhook
+  repository: registry.k8s.io/sig-storage/snapshot-validation-webhook
   tag: v6.0.1
   targetVersion: ">= 1.20"
 - name: vsphere-cloud-controller-manager
@@ -57,5 +57,5 @@ images:
   tag: v2.6.0-gardener3
 - name: liveness-probe
   sourceRepository: github.com/kubernetes-csi/livenessprobe
-  repository: k8s.gcr.io/sig-storage/livenessprobe
+  repository: registry.k8s.io/sig-storage/livenessprobe
   tag: v2.7.0
