* Clean out old branch configurations that were potentially creating confusion. They can be restored at a later date. * Add `gcve_automation` branch until integration is complete and merge to main can be managed with a single signoff
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,47 +1,3 @@
 cfgs:
   default:
-    branches: ['main']
-    inherit:
-      gardener-extension-provider-vsphere-updates:
-        jobs:
-          create_update_pull_requests:
-            repo:
-              trigger: false
-              disable_ci_skip: true
-            steps: ~
-            traits:
-              component_descriptor: ~
-              update_component_deps: ~
-              cronjob:
-                interval: '5m'
-              version: ~
-      gardener-extension-provider-vsphere:
-        base_definition:
-          steps:
-            verify:
-              image: 'golang:1.18.5'
-
-  release-branches:
-    index: 1
-    branches: ['release-v0\..*']
-    inherit:
-      gardener-extension-provider-vsphere:
-        base_definition:
-          steps:
-            verify:
-              image: 'golang:1.18.5'
-        jobs:
-          release:
-            traits:
-              release:
-                nextversion: 'bump_patch'
-
-  release-branches-0-6:
-    index: 2
-    branches: ['release-v0\.6']
-    inherit:
-      gardener-extension-provider-vsphere:
-        base_definition:
-          steps:
-            verify:
-              image: 'eu.gcr.io/gardener-project/3rd/golang:1.15.5'
+    branches: ['main', 'gcve_automation']
