added release branch v0.20

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,3 +1,14 @@
 cfgs:
   default:
     branches: ['main', 'gcve_automation']
+
+  release-branch-v0.20:
+    index: 1
+    branches: ['release-v0\.20']
+    inherit:
+      gardener-extension-provider-vsphere:
+        jobs:
+          release:
+            traits:
+              release:
+                nextversion: 'bump_patch'
