Iterate on ssh tunnel to vsphere infra
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ TODO
 .ci/terraform/override.tf.json
 .ci/terraform/*_override.tf
 .ci/terraform/*_override.tf.json
+.ci/terraform/.terraform.lock.hcl
