Attempt to do this without the container-optimized with Docker image. Originally specified to get around the Argo configuration requiring Docker, the COS image is no longer supported by GKE and there's no way to roll back.
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/.ci/terraform/local-values.yaml
+++ b/.ci/terraform/local-values.yaml
@@ -36,3 +36,13 @@ controller:
 
 reserve-excess-capacity:
   enabled: false
+
+argo:
+  argo:
+    executor:
+      containerRuntimeExecutor: emissary
+      containerRuntimeExecutors:
+      - name: emissary
+        selector:
+          matchLabels:
+            workflows.argoproj.io/container-runtime-executor: emissary
