--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -7,6 +7,7 @@ metadata:
     gardener.cloud/role: controlplane
     app: kubernetes
     role: cloud-controller-manager
+    high-availability-config.resources.gardener.cloud/type: controller
 spec:
   revisionHistoryLimit: 1
   replicas: {{ .Values.replicas }}
