--- a/charts/gardener-extension-provider-vsphere/templates/poddisruptionbudget.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/poddisruptionbudget.yaml
@@ -11,8 +11,7 @@ metadata:
   labels:
 {{ include "labels" . | indent 4 }}
 spec:
-  maxUnavailable: {{ sub (int .Values.replicaCount) 1 }}
+  maxUnavailable: 1
   selector:
     matchLabels:
 {{ include "labels" . | indent 6 }}
-{{- end }}
