--- a/charts/gardener-extension-provider-vsphere/templates/rbac.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/rbac.yaml
@@ -100,6 +100,18 @@ rules:
   - verticalpodautoscalers
   verbs:
   - "*"
+- apiGroups:
+  - policy
+  resources:
+  - poddisruptionbudgets
+  verbs:
+  - create
+  - get
+  - list
+  - watch
+  - patch
+  - update
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
