--- a/charts/internal/machine-controller-manager/seed/templates/deployment.yaml
+++ b/charts/internal/machine-controller-manager/seed/templates/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     gardener.cloud/role: controlplane
     app: kubernetes
     role: machine-controller-manager
+    high-availability-config.resources.gardener.cloud/type: controller
 spec:
   revisionHistoryLimit: 1
   replicas: {{ .Values.replicas }}
