--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/deployment-csi-snapshot-controller.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     app: csi-snapshot-controller
     role: controller
+    high-availability-config.resources.gardener.cloud/type: controller
 spec:
   replicas: {{ .Values.csiSnapshotController.replicas }}
   revisionHistoryLimit: 1
