--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/poddisruptionbudget-vsphere-csi-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/poddisruptionbudget-vsphere-csi-controller.yaml
@@ -1,16 +1,16 @@
 {{- if semverCompare ">= 1.21-0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: policy/v1
-{{- else }}
+  {{- else }}
 apiVersion: policy/v1beta1
-{{- end }}
+  {{- end }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "name" . }}
+  name: vsphere-csi-controller
   namespace: {{ .Release.Namespace }}
   labels:
-{{ include "labels" . | indent 4 }}
+    app: vsphere-csi-controller
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-{{ include "labels" . | indent 6 }}
+      app: vsphere-csi-controller
