--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/poddisruptionbudget.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/poddisruptionbudget.yaml
@@ -1,16 +1,18 @@
 {{- if semverCompare ">= 1.21-0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: policy/v1
-{{- else }}
+  {{- else }}
 apiVersion: policy/v1beta1
-{{- end }}
+  {{- end }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "name" . }}
+  name: cloud-controller-manager
   namespace: {{ .Release.Namespace }}
   labels:
-{{ include "labels" . | indent 4 }}
+    app: kubernetes
+    role: cloud-controller-manager
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-{{ include "labels" . | indent 6 }}
+      app: kubernetes
+      role: cloud-controller-manager
