--- a/example/20-crd-extensions.gardener.cloud_containerruntimes.yaml
+++ b/example/20-crd-extensions.gardener.cloud_containerruntimes.yaml
@@ -256,7 +256,7 @@ spec:
                           description: API version of the referent
                           type: string
                         kind:
-                          description: 'Kind of the referent; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"'
+                          description: 'Kind of the referent; More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
                           type: string
                         name:
                           description: 'Name of the referent; More info: http://kubernetes.io/docs/user-guide/identifiers#names'
