--- a/branch.cfg
+++ b/branch.cfg
@@ -1,6 +1,6 @@
 cfgs:
   default:
-    branches: ['main', 'e2e', 'enh/full-gcve-lifecycle']
+    branches: ['main', 'e2e', 'full-gcve-lifecycle']
 
   release-branch-v0.20:
     index: 1
